--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "futureHealthAdmin",
+  "name": "futureHealthCustomer",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development --port 4000",
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development --port 5000",
     "lint": "(eslint . --ext .js --ext .jsx --ext .json)",
     "lint:fix": "eslint . --fix --ext .js --ext .jsx --ext .json",
     "test": "npm run lint && jest",
@@ -12,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jpolack/futureHealthAdmin.git"
+    "url": "git+https://github.com/jpolack/futureHealthCustomer.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jpolack/futureHealthAdmin/issues"
+    "url": "https://github.com/jpolack/futureHealthCustomer/issues"
   },
-  "homepage": "https://github.com/jpolack/futureHealthAdmin#readme",
+  "homepage": "https://github.com/jpolack/futureHealthCustomer#readme",
   "dependencies": {
     "material-ui": "^1.0.0-beta.37",
     "material-ui-icons": "^1.0.0-beta.36",
